# ey-agentic-challenge

./: README.md  pyproject.toml
.cache/41/: cache.db
autogenChallenge/: pyvenv.cfg
autogenChallenge/.cache/41/: cache.db
first_attempt/: .gitignore  Image_gen_stabilityai_turbo.py  Marketing_Strategizer_2 1.ipynb  ai-ad-agency.py  auto_gen_market_agent.ipynb  convert_md_to_pdf.py  main.py  marketing strategizer.ipynb  md_to_pdf.py  pyproject.toml  test.py
src/: Market_Strategizer2.py  README.md  pyproject.toml
