[project]
name = "agentic-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "dhiraj"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "autogen-agentchat (>=0.4.9.2,<0.5.0.0)",
    "chainlit (>=2.4.1,<3.0.0)",
    "autogen-ext[openai] (>=0.4.9.2,<0.5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "markdown (>=3.7,<4.0)",
    "weasyprint (>=64.1,<65.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


